[gd_scene load_steps=3 format=2]

[ext_resource path="res://ControlMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/de.jpg" type="Texture" id=2]

[node name="ControlMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="CanvasLayer"]
scale = Vector2( 1.14, 1.14 )
texture = ExtResource( 2 )
centered = false

[node name="ButtonJouer" type="Button" parent="CanvasLayer"]
margin_left = 490.0
margin_top = 240.0
margin_right = 534.0
margin_bottom = 20.0
text = "Jouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOptions" type="Button" parent="CanvasLayer"]
margin_left = 480.0
margin_top = 270.0
margin_right = 543.0
margin_bottom = 290.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTestReseau" type="Button" parent="CanvasLayer"]
margin_left = 470.0
margin_top = 300.0
margin_right = 556.0
margin_bottom = 320.0
text = "Test r√©seau"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="CanvasLayer"]
margin_left = 445.765
margin_top = 200.63
margin_right = 579.765
margin_bottom = 224.63
text = "Pseudonyme"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/ButtonJouer" to="." method="_on_ButtonJouer_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonTestReseau" to="." method="_on_ButtonTestReseau_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Username" to="." method="_on_Username_focus_entered"]
